# nvenc-live

./: .gitignore  CMakeLists.txt  README.md  Visualization.ipynb  runEval.sh.in  ssim_sample.csv
amr-data/: Sizes_high.txt  Sizes_low.txt  Times_high.txt  Times_low.txt
amr-data/time_high/: Sizes.txt  time-1x1.txt  time-1x2.txt  time-1x3.txt  time-1x4.txt  time-1x5.txt  time-1x6.txt  time-1x7.txt  time-1x8.txt  time-2x1.txt  time-2x2.txt  time-2x3.txt  time-2x4.txt  time-2x5.txt  time-2x6.txt  time-2x7.txt  time-2x8.txt  time-3x1.txt  time-3x2.txt  time-3x3.txt  time-3x4.txt  time-3x5.txt  time-3x6.txt  time-3x7.txt  time-3x8.txt  time-4x1.txt  time-4x2.txt  time-4x3.txt  time-4x4.txt  time-4x5.txt  time-4x6.txt  time-4x7.txt  time-4x8.txt  time-5x1.txt  time-5x2.txt  time-5x3.txt  time-5x4.txt  time-5x5.txt  time-5x6.txt  time-5x7.txt  (+25 more)
amr-data/time_low/: Sizes.txt  time-1x1.txt  time-1x2.txt  time-1x3.txt  time-1x4.txt  time-1x5.txt  time-1x6.txt  time-1x7.txt  time-1x8.txt  time-2x1.txt  time-2x2.txt  time-2x3.txt  time-2x4.txt  time-2x5.txt  time-2x6.txt  time-2x7.txt  time-2x8.txt  time-3x1.txt  time-3x2.txt  time-3x3.txt  time-3x4.txt  time-3x5.txt  time-3x6.txt  time-3x7.txt  time-3x8.txt  time-4x1.txt  time-4x2.txt  time-4x3.txt  time-4x4.txt  time-4x5.txt  time-4x6.txt  time-4x7.txt  time-4x8.txt  time-5x1.txt  time-5x2.txt  time-5x3.txt  time-5x4.txt  time-5x5.txt  time-5x6.txt  time-5x7.txt  (+25 more)
code/: CMakeLists.txt  Makefile  Makefile.direct  README.md  context_group.cpp  context_group.h  encode.cpp  encode.py  executeEncode.sh  filereader.cpp  filereader.h  link_nvenc_encode.h  link_stitcher.h  my.eps  my.plot  nvenc_bitrates.h  nvenc_config.cpp  nvenc_config.h  nvenc_encode.c  nvenc_encode.cpp  nvenc_hw.cpp  nvenc_hw.h  nvenc_planeset.h  runEval.sh  ssim.plot  ssim.sh  stitch.cpp  values.txt
dash-examples/: ffmpeg.mpd  notes.txt
dash-examples/demo-24-7-1/: Manifest.mpd
dash-examples/demo-24-7-availtime/: Manifest.mpd
dash-examples/demo-24-7-minupdatePeriod/: Manifest.mpd
dash-examples/demo-24-7-nolivestart/: Manifest.mpd
dash-examples/demo-24-7-timeline/: Manifest.mpd
dash-examples/demo-24-7-timeshift/: Manifest.mpd
eval/: HEVC_eval.ipynb  runEval.sh
eval/videos/: README.md
paper/: README.md  bibliography.bib  body.tex  demo.tex  eval.tex  main.tex
paper/figures/: Sizes-for-youtubeclip.txt  Sizes.txt  Streaming_scenario.vsd  (+11 more)
poster/: RATS_poster+cg_v2.pptx  RATS_poster.pptx  RATS_poster_final.pptx
(+16 files in other folders)
